--- a/changelog
+++ b/changelog
@@ -1,3 +1,18 @@
+turnkey-zencart-12.1 (1) turnkey; urgency=low
+
+  * Upgraded to latest version of ZenCart.
+
+  * Added phpsh (interative shell for PHP) and php5-cli (generically useful).
+
+  * Hardcoded component versions:
+
+    zen-cart        1.5.1
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Fri, 05 Apr 2013 08:00:00 +0200
+
 turnkey-zencart-12.0 (1) turnkey; urgency=low
 
   * Initial public release of TurnKey ZenCart.
