--- a/changelog
+++ b/changelog
@@ -4,7 +4,7 @@ turnkey-zencart-12.1 (1) turnkey; urgency=low
 
   * Added phpsh (interative shell for PHP) and php5-cli (generically useful).
 
-  * Hardcoded component versions:
+  * Upstream source component versions:
 
     zen-cart        1.5.1
 
