--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+turnkey-zencart-14.0 (1) turnkey; urgency=low
+
+  * Upgraded to latest upstream version of ZenCart (v1.5.4-12302014).
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Fri, 19 Jun 2015 14:33:12 +1000
+
 turnkey-zencart-13.0 (1) turnkey; urgency=low
 
   * PHPMyAdmin:
