--- a/changelog
+++ b/changelog
@@ -2,6 +2,10 @@ turnkey-zencart-14.0 (1) turnkey; urgency=low
 
   * Upgraded to latest upstream version of ZenCart (v1.5.4-12302014).
 
+  * Replaced PHPMyAdmin with Adminer
+
+  * Hardened default SSL settings
+
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
