--- a/changelog
+++ b/changelog
@@ -1,3 +1,16 @@
+turnkey-zencart-14.2 (1) turnkey; urgency=low
+
+  * Updated Zencart to 1.5.5e
+
+  * Updated Adminer to 4.2.5
+
+  * Installed security updates.
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Stefan Davis <stefan@turnkeylinux.org>  Fri, 12 May 2017 08:25:10 +1000
+
 turnkey-zencart-14.1 (1) turnkey; urgency=low
 
   * Installed security updates.
