--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+turnkey-zencart-15.0 (1) turnkey; urgency=low
+
+  * Install Adminer directly from stretch/main repo
+
+  * Replace MySQL with MariaDB
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Stefan Davis <stefan@turnkeylinux.org>  Tue, 09 Jan 2018 00:18:05 +1100
+
 turnkey-zencart-14.2 (1) turnkey; urgency=low
 
   * Updated Zencart to 1.5.5e
