--- a/changelog
+++ b/changelog
@@ -4,7 +4,17 @@ turnkey-zencart-15.0 (1) turnkey; urgency=low
 
   * Install Adminer directly from stretch/main repo
 
-  * Replace MySQL with MariaDB
+  * Provide "adminer" root-like user for Adminer MySQL access
+
+  * Replace MySQL with MariaDB (drop-in MySQL replacement)
+
+  * Updated version of mysqltuner script
+
+  * Includes PHP7.0 (installed from Debian repos)
+
+  * Updated PHP default settings
+
+  * Remove phpsh (no longer maintained)
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
