--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+turnkey-zencart-16.0 (1) turnkey; urgency=low
+
+  * Updated Zencart to 1.5.7
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Stefan Davis <stefan@turnkeylinux.org>  Tue, 14 Jul 2020 04:38:43 +1000
+
 turnkey-zencart-15.1 (1) turnkey; urgency=low
 
   * Rebuild to resolve inadvertent removal of mariadb during sec-updates
