--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+turnkey-zencart-16.1 (1) turnkey; urgency=low
+
+  * Updated Zencart to 1.5.7c
+
+  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Stefan Davis <stefan@turnkeylinux.org>  Tue, 30 Mar 2021 17:26:43 +1100
+
 turnkey-zencart-16.0 (1) turnkey; urgency=low
 
   * Updated Zencart to 1.5.7.
