--- a/changelog
+++ b/changelog
@@ -1,3 +1,14 @@
+turnkey-zencart-17.0 (1) turnkey; urgency=low
+
+  * Install latest version of Zencart 1.5.7c
+
+  * Update PHP from 7.3 -> 7.4
+
+  * Note: Please refer to turnkey-core's 16.1 changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Stefan Davis <stefan@turnkeylinux.org>  Tue, 07 Dec 2021 05:12:18 +0000
+
 turnkey-zencart-16.1 (1) turnkey; urgency=low
 
   * Updated Zencart to 1.5.7c
