--- a/changelog
+++ b/changelog
@@ -2,7 +2,8 @@ turnkey-zencart-17.0 (1) turnkey; urgency=low
 
   * Install latest version of Zencart 1.5.7c
 
-  * Update PHP from 7.3 -> 7.4
+  * Updated all relevant Debian packages to Bullseye/11 versions; including
+    PHP 7.4.
 
   * Note: Please refer to turnkey-core's 16.1 changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
