Add automated changelog entry.

--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+turnkey-zencart-17.1 (1) turnkey; urgency=low
+
+  * Updated all Debian packages to latest.
+    [ autopatched by buildtasks ]
+
+  * Patched bugfix release. Closes #1734.
+    [ autopatched by buildtasks ]
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Tue, 20 Sep 2022 20:16:31 +0000
+
 turnkey-zencart-17.0 (1) turnkey; urgency=low
 
   * Install latest version of Zencart 1.5.7d
